update post: [QC #2] Book Summary: "Quantum Supremacy"

--- a/cmaqw3i7j000609ld1ar691i5.md
+++ b/cmaqw3i7j000609ld1ar691i5.md
@@ -5,6 +5,7 @@ seoDescription: "In-depth review of quantum computing's principles, implementati
 datePublished: Fri May 16 2025 14:24:25 GMT+0000 (Coordinated Universal Time)
 cuid: cmaqw3i7j000609ld1ar691i5
 slug: qc-2-book-summary-quantum-supremacy
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1747532453802/26ede496-166d-4f1b-8423-6d94f151b270.jpeg
 ogImage: https://cdn.hashnode.com/res/hashnode/image/upload/v1747405460506/23fa2604-5b5b-4865-b7a4-accb04b285ea.jpeg
 tags: technology, computer-science, future, quantum-computing
 
